<@rfelipe,@matheus-malta>Roles de login funcionando

--- a/app/src/main/resources/templates/inicio.html
+++ b/app/src/main/resources/templates/inicio.html
@@ -1,10 +1,9 @@
 <!DOCTYPE HTML>
-<html th:replace="~{layout :: layout(~{::title}, ~{::body})}" xmlns:th="http://www.thymeleaf.org">
+<html th:replace="~{layoutSemMenu :: layout(~{::title}, ~{::body})}" xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Aceleradora Ágil</title>
 </head>
 <body>
-    <div th:include="@{./partes/cabecalhoPadrao}"/>
     <br>
     <div class="agrupadora">
         <nav class="navegacao">
