--- a/app/src/main/resources/templates/layoutSemMenu.html
+++ b/app/src/main/resources/templates/layoutSemMenu.html
@@ -23,35 +23,11 @@
 
 <body>
 <header>
-    <nav class="navbar is-mobile " role="navigation" aria-label="main navigation">
+    <nav class="navbar" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
             <a class="navbar-item" href="/">
-                <p class="titulo-nav">HospeBem</p>
+                <p class="titulo-nav">Hospebem</p>
             </a>
-            <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
-               data-target="navbarBasicExample">
-                <span aria-hidden="true"></span>
-                <span aria-hidden="true"></span>
-                <span aria-hidden="true"></span>
-            </a>
-        </div>
-        <div id="navbarBasicExample" class="navbar-menu">
-            <div class="navbar-start">
-                <div class="navbar-item has-dropdown is-hoverable">
-                    <a class="navbar-item menu">
-                        Menu
-                    </a>
-                    <div class="navbar-dropdown">
-                        <a class="navbar-item" th:href="@{/solicitacao/cadastro}">
-                            Cadastro solicitação
-                        </a>
-                        <a class="navbar-item" th:href="@{/solicitacao/hospital/lista}">
-                            Lista de solicitações hospital
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
         </div>
     </nav>
 </header>
