--- a/app/src/main/resources/templates/bemvindo/bemvindo.html
+++ b/app/src/main/resources/templates/bemvindo/bemvindo.html
@@ -10,7 +10,7 @@
     <div class="agrupadora has-text-centered">
 
         <h1 class="title is-1 espaco-titulo">Hospebem</h1>
-        <p>Sistema de agendamento entre hospitais e pousada <a href="https://www.viavida.org.br/" target="_blank">ViaVida</a></p>
+        <p>Sistema de agendamento entre hospitais e pousada <a href="https://www.viavida.org.br/" target="_blank">ViaVida</a>.</h6>
 
         <div class="columns">
             <img src="/img/hospebem.png" alt="Logo viaVida">
@@ -22,17 +22,6 @@
             </div>
         </div>
 
-        <div sec:authorize="hasAuthority(T(com.thoughtworks.aceleradora.login.dominio.Cargo).ADMINISTRADOR.getNome())">
-            Div que somente o administrador pode ver!
-            <a th:href="@{/admin}">Ver página de admin!</a> <br>
-            <a th:href="@{/assistente}">Tentar ver página de assistente e falhar miseravelmente</a>
-        </div>
-
-        <div sec:authorize="hasAuthority(T(com.thoughtworks.aceleradora.login.dominio.Cargo).ASSISTENTE_SOCIAL.getNome())">
-            Div que somente a assistente social pode ver!
-            <a th:href="@{/assistente}">Ver página de assistente!</a> <br>
-            <a th:href="@{/admin}">Tentar ver página de admin e falhar miseravelmente</a>
-        </div>
 
         <div sec:authorize="!isAuthenticated()">
             <a href="/login">
@@ -41,7 +30,8 @@
             <a href="/registrar">
                 <div>Registrar</div>
             </a>
-    </div>
+        </div>
+
         <div sec:authorize="isAuthenticated()">
             <form action="#" th:action="@{/logout}" method="post">
                 <input type="submit" class="button is-medium is-outlined" value="Deslogar">
@@ -50,15 +40,16 @@
     </div>
 </main>
 
-    <script>
-        (function () {
-        var burger = document.querySelector('.burger');
+<script>
+    (function () {
+        let burger = document.querySelector('.burger');
         let nav = document.querySelector('#' + burger.dataset.target);
+
         burger.addEventListener('click', function () {
             burger.classList.toggle('is-active');
             nav.classList.toggle('is-hoverable');
             return burger;
         });
     };
-    </script>
+</script>
 </html>
