<@rfelipe,@mathues-malta>tenta ajustar form assistente social

--- a/app/src/main/resources/templates/layout.html
+++ b/app/src/main/resources/templates/layout.html
@@ -79,7 +79,9 @@
         if (pesoInput) {
             pesoInput.addEventListener('input', pesoCadeirante());
         }
+        registraAssistente();
     });
+
 </script>
 
 </html>
