--- a/app/src/main/resources/templates/layoutSemMenu.html
+++ b/app/src/main/resources/templates/layoutSemMenu.html
@@ -19,7 +19,9 @@
     <script src="https://unpkg.com/pikaday@1.7.0/pikaday.js"></script>
     <script src="/js/calender.js"></script>
     <script src="/js/validaCadastroSolicitacao.js"></script>
+    <script src="/js/validaIdade.js"></script>
     <script src="/js/validacaoRegistrar.js"></script>
+
 </head>
 
 <body>
